Ajuste compatibilidade com Java 8